# ChangeLog for dev-libs/hidapi
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*hidapi-9999 (29 Jul 2013)
*hidapi-0.8.0_pre20130121 (29 Jul 2013)

  29 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +hidapi-0.8.0_pre20130121.ebuild, +hidapi-9999.ebuild,
  +files/hidapi-fox17.patch, +metadata.xml:
  Initial commit. See gentoo bug #454948.
