@@ -1,6 +1,4 @@
 AUX hidapi-fox17.patch 669 SHA256 3850343dc1506b991a6f904cd83841b9b3eabe848ae0c921d6f7b6bc77725bdc SHA512 6e18697e767df6ba442b79b44e2cf83d472eb711af4eda87b1627dbb9be1fa61126353b0e7a7afa8d5b5c1c155a720ac66dc20f801015a1841b5090721c3fd1e WHIRLPOOL 6edb26686e2e54b4de848c08d575a2ba55db54303cc3547b8f0c67e05c05a01714c82de1428c390fc4ef3f40d402b2d71cf70367acb79670e808bad211faf989
-DIST hidapi-0.8.0_pre20130121.tar.xz 257900 SHA256 70440f658dbf1f840647d0756e230fdfe479fd4980d3ba7b299715b1947a8916 SHA512 6735112cae24c845bf5ec1fc04c1cafc12c31a1ec5f8d560fd8089f1abf9b1f4aca2c027b1103b7154f698334d7f9ee8f5e72eb5571ecce5abf3fe716ca68096 WHIRLPOOL 94a691cbeafedd93ac786202f8acb2e4d1a6433cc379c9f7de792c0e1f881b34339df43289804105511f634b26144720e22377a37f1ac1c202a81907a988c773
-EBUILD hidapi-0.8.0_pre20130121.ebuild 1354 SHA256 90db17a1ae6a6f6610839acf75d2dc804514d5509f8ab79c764decc72d5584b9 SHA512 028e61c1a6442ae0ea631fdd68d2bd631409b59bf0e6aabc89d3c6acfa833ae549cb71f4945f63391eacb47dacd292763a16ff1d6f878d4096b5b06a80de2779 WHIRLPOOL 7c13a5017cf22b17de4629496c829ab6ef9bbd324fecd637520f3c84c19d7db4c1487bd27b9b4ada1c7cc817e19a9c2e69ad583dc8bf7a996da17b4f7b905ac2
 EBUILD hidapi-9999.ebuild 1354 SHA256 90db17a1ae6a6f6610839acf75d2dc804514d5509f8ab79c764decc72d5584b9 SHA512 028e61c1a6442ae0ea631fdd68d2bd631409b59bf0e6aabc89d3c6acfa833ae549cb71f4945f63391eacb47dacd292763a16ff1d6f878d4096b5b06a80de2779 WHIRLPOOL 7c13a5017cf22b17de4629496c829ab6ef9bbd324fecd637520f3c84c19d7db4c1487bd27b9b4ada1c7cc817e19a9c2e69ad583dc8bf7a996da17b4f7b905ac2
-MISC ChangeLog 393 SHA256 33298f0b8f5506b5a21201a0f787840541339dae7f36251c17ae0e493bcb1399 SHA512 d4a8a439608c7205a28db7dfe2d2200ad0754f69822c9ad884dc7c39c0e7daf6e112410bd512d1f8350dcd8ab5a144d007d3d30dfaaf03ae509e180ea8857647 WHIRLPOOL 56421546375d1b9ee11990d04baaa421b36da268f4cca64bd1a010c912a0fb4ff6883140abd5fa17934150e3e2f49668b178b36134d1cf48cd310a00e75cd3c2
+MISC ChangeLog 594 SHA256 117632978953d4510f78ff188f43c72a6f7740345c5b581e3c282d69db7fb40c SHA512 6aefcfa10229de08212739364e900a13300648f270fceabc6b8f2cd36bb4375ff2a3321241f719ff923ba9cd85dd441dc4f743b2b6be80db4384438ec5417ab4 WHIRLPOOL c460e0ad2c67a4b64e3c97ab2d8838d6a1348b8b403fd21e2307acce9b666f1f80073d3de05407fea43afbea0eb9959931e918021a7b299a677fbf9fb516f213
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
