@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  08 Dec 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -hidapi-0.8.0_pre20130121.ebuild:
+  Removed versioned ebuild because it is in the main tree. Thanks to Alex
+  Barker for the notice.
+
 *hidapi-9999 (29 Jul 2013)
 *hidapi-0.8.0_pre20130121 (29 Jul 2013)
 
